add tab module, component html

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/main.css">
 
-        <script src="js/react.js"></script>
-        <script src="js/react-dom.js"></script>
+        <script src="js/react/react.js"></script>
+        <script src="js/react/react-dom.js"></script>
+        <script src="js/react/react-tabs.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
         <script type="text/babel" src="js/main.js"></script>
     </head>
